-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
5.6.3, 5.10.1, 5.11.1, 5.12.3, 5.13, 5.15.7, 6.2.1, 6.7
-
60194389c (dev), 8d28f9811 (6.7)
Note: the reproduction is possible with attached qml file: main_list_viewport_wrong_adjustment.qml
Conditions:
- raw QML ListView component, with enough items to scroll them out of viewport
- ListView properties are set to:
highlightFollowsCurrentItem: false snapMode: ListView.NoSnap highlightRangeMode: ListView.NoHighlightRange
- item of ListView is made current (by setting listView.currentIndex = model.index) by clicking it.
Actions:
- Scroll with touch/mouse the list until some
- unselected item
- will be partially hidden behind top border of the list
- Click on this partially hidden top item
Observed:
- List adjusts content position to make new current item to be positioned exactly at the top edge of viewport.
Expected:
- No content position adjustment happens, due to mentioned properties values.
Note:
- When analogous action applied to the bottom item, no content position adjustment happens, so with bottom item ListView behaves correctly.
Please, see the attached example application file: main_list_viewport_wrong_adjustment.qml